# NumbaMinpack

./: .gitattributes  CMakeLists.txt  MANIFEST.in  README.md  Untitled.ipynb  comparison2scipy.ipynb  compile.sh  pyproject.toml  setup.py
.github/workflows/: build_wheels.yml
NumbaMinpack/: driver.py
src/: hybrd1.f  lmdif1.f  minpack.f90
tests/: test.py
